package edu.csc207.recruitment.managers;

public interface Manager {
    /**
     * Performs background actions
     * Gets commands from the user
     * until the user inputs the exit message
     */
    void manage();
}
